Adding description of VSEM 1d example to paper.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -32,6 +32,7 @@
 \newcommand{\postDensNorm}{\overline{\pi}} % Normalized posterior density.
 \newcommand{\normCst}{Z} % Normalizing constant for posterior density. 
 \newcommand{\likPar}{\Sigma} % Likelihood parameter
+\newcommand{\ParTrue}{\Par_{\star}}
 
 
 % --------------------------------------------------------------------------------------------------
@@ -195,8 +196,29 @@
 \newcommand{\timeIndex}{\mcmcIndex}
 \newcommand{\indexTime}[2][\timeIndex]{{#2}_{#1}}
 \newcommand{\NTimeStep}{K}
+\newcommand{\forcing}{w}
 
+% --------------------------------------------------------------------------------------------------
+% Very Simple Ecosystem Model (VSEM)
+% --------------------------------------------------------------------------------------------------
 
+\newcommand{\stateV}{\state_{\textrm{v}}}
+\newcommand{\stateR}{\state_{\textrm{r}}}
+\newcommand{\stateS}{\state_{\textrm{s}}}
+\newcommand{\dstateV}{\dot{\state}_{\textrm{v}}}
+\newcommand{\dstateR}{\dot{\state}_{\textrm{r}}}
+\newcommand{\dstateS}{\dot{\state}_{\textrm{s}}}
+\newcommand{\NPP}{\textrm{NPP}}
+\newcommand{\GPP}{\textrm{GPP}}
+\newcommand{\alphaV}{\alpha_{\textrm{v}}}
+\newcommand{\tauV}{\tau_{\textrm{v}}}
+\newcommand{\tauR}{\tau_{\textrm{r}}}
+\newcommand{\tauS}{\tau_{\textrm{s}}}
+\newcommand{\LUE}{\ell}
+\newcommand{\LAR}{r}
+\newcommand{\KEXT}{\kappa}
+\newcommand{\fracRespiration}{\gamma}
+\newcommand{\LAI}{\textrm{LAI}}
 
 
 
