--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -862,6 +862,13 @@ eprint = {
 }
 }
 
+%  ---------------------------------------------------------------------------------------------------
+% Ecological Applications
+%  ---------------------------------------------------------------------------------------------------
+
+@Manual{vsem,    title = {BayesianTools: General-Purpose MCMC and SMC Samplers and Tools for BayesianStatistics},    author = {Florian Hartig and Francesco Minunno and Stefan { Paul}},    year = {2023},    note = {R package version 0.1.8},    url = {https://CRAN.R-project.org/package=BayesianTools},  }
+
+
 
 
 
