--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -13,6 +13,7 @@
 \usepackage{natbib}
 \usepackage{bbm}
 \usepackage{caption, subcaption} % Captions and sub-figures. 
+\usepackage{fancyvrb} % For writing using verbatim font inline. 
 % \usepackage[demo]{graphicx}
 
 % Plotting
@@ -119,7 +120,7 @@ as \textit{surrogates} or \textit{emulators}. The focus of the present work is o
 to derive emulators for the forward model or log-likelihood. 
 
 % Motivating Example: Parameter Estimation for Dynamical Models
-\subsection{Motivating Example: Parameter Estimation for Dynamical Models}
+\subsection{Motivating Example: Parameter Estimation for Dynamical Models} \label{dynamical_models}
 While many problems fall under the generic setting outlined above, our primary application of interest 
 stems from the problem of parameter estimation for dynamical models that describe complex systems. 
 This problem arises in various forms under the umbrella of Earth system modeling \citep{ESM_modeling_2pt0}, 
@@ -128,7 +129,7 @@ establish notation for the dynamical model applications, and cast the problem of
 differential equations as a specific instance of the generic inverse problem \ref{inv_prob_Gaussian}. 
 Consider the initial value problem 
 \begin{align}
-\frac{d}{d\Time} \state(\Time, \Par) &= \odeRHS(\state(\Time, \Par), \Par), &&x(\timeStart) = \stateIC,
+\frac{d}{d\Time} \state(\Time, \Par) &= \odeRHS(\state(\Time, \Par), \Par), &&x(\timeStart) = \stateIC, \label{ode_ivp}
 \end{align}
 describing the time evolution of $\dimState$ state variables 
 $\state(\Time) \Def \left[\indexState[1]{\state}(\Time), \dots, \indexState[\dimState]{\state}(\Time)\right]^\top \in \mathbb{R}^{\dimState}$,
@@ -1155,7 +1156,69 @@ where $\CovComb(\Par) \Def \likPar + \emKer{\fwd}(\Par)$ and $\CovComb[\Naugment
 % Learning Likelihood Parameters
 \section{Learning Likelihood Parameters} \label{section_lik_par}
 
-% 
+% Numerical Experiments
+\section{Numerical Experiments}
+
+% Very Simple Ecosystem Model 
+\subsection{Very Simple Ecosystem Model}
+Our first set of experiments utilizes the \textit{Very Simple Ecosystem Model} (VSEM), a toy model capturing the basic 
+structure of more complex land surface models, thus ideally suited for algorithm evaluation \citep{vsem}. The model 
+describes the evolution of the state vector
+\begin{align*}
+\state(\Time) \Def [\stateV(\Time), \stateR(\Time), \stateS(\Time)]^\top \in \R^{3}, 
+\end{align*}
+with the state variables representing the quantity of carbon (\textrm{kg C/$m^2$}) in above-ground vegetation, below-ground 
+vegetation (roots), and soil reservoirs, respectively. The VSEM model is given by the system of coupled 
+ordinary differential equations
+\begin{align}
+\dstateV(\Time) &= \alphaV \NPP(\stateV(\Time), \forcing(\Time)) - \frac{\stateV(\Time)}{\tauV} \\
+\dstateR(\Time) &= (1.0 - \alphaV) \NPP(\stateV(\Time), \forcing(\Time)) - \frac{\stateR(\Time)}{\tauR} \nonumber \\ 
+\dstateS(\Time) &= \frac{\stateR(\Time)}{\tauR} + \frac{\stateV(\Time)}{\tauV} - \frac{\stateS(\Time)}{\tauS}, \nonumber
+\end{align}
+where the model forcing $\forcing(\Time)$ is provided by photosynthetically active radiation 
+(PAR; \textrm{MJ/$m^2$/day}), and the above dynamics rely on the following parameterized model of 
+Net Primary Productivity (NPP; \textrm{kg C/$m^2$/day}),
+\begin{align}
+\NPP(\stateV, \forcing) &= (1 - \fracRespiration) \GPP(\stateV, \forcing) \\
+\GPP(\stateV, \forcing) &= \forcing \cdot \LUE \cdot \left[1 - \exp\left\{-\KEXT \cdot \LAI(\stateV) \right\} \right] \nonumber \\
+\LAI(\stateV) &= \LAR \cdot \stateV. \nonumber
+\end{align} 
+We note that the ODE is of the form \ref{ode_ivp}, where the nonlinear dynamics $\odeRHS$ additionally depend on a 
+time-dependent forcing $\forcing(\Time)$. Potential calibration parameters in this model include 
+$\{\alphaV, \tauV, \tauR, \tauS, \LUE, \fracRespiration, \LAR\}$, as well as the initial conditions for the three state variables. 
+For all experiments, the model is discretized via a standard forward Euler scheme operating at a daily time step using the 
+software provided in the R \verb+BayesianTools+ package \citep{vsem}. The forcing PAR data is simulated using the basic
+radiation model provided by the \verb+VSEMcreatePAR+ function in this package.
+\todo: list default and true parameter values. \\
+\todo: Introduce the notation $\ParTrue$ for the true parameter value used to simulate the data. \\
+\todo: Introduce model misspecification by letting the ground truth fixed parameter differ from their defaults, but use the 
+defaults in the calibration. \\
+\todo: define LAI.
+
+\subsubsection{One-Dimensional Example} \label{vsem_1d}
+Here we describe a Bayesian inverse problem setup using the VSEM model with one-dimensional input and output 
+spaces ($\dimPar = \dimObs = 1$). While not representative of the typical difficulties encountered in higher dimensions, 
+this basic example is intended to build intuition by allowing for easy visualization. We consider calibrating the light extinction
+coefficient $\KEXT$ with the remaining parameters fixed at their default values. The model is simulated over a three year period so 
+that the number of time steps is $\NTimeStep \Def 365 \cdot 3$. The observable is defined to be the corresponding three 
+year average of $\LAI$. Using the notation from \cref{dynamical_models}, we define the likelihood by 
+\begin{align*}
+\obs &= (\obsOp \circ \solutionOp)(\Par) + \noise \\
+\noise &\sim \Gaussian(0, 0.277^2)
+\end{align*}
+with
+\begin{align*}
+\obsOp(\indexTime[1]{\state}, \dots, \indexTime[\NTimeStep]{\state}) 
+\Def \frac{1}{\NTimeStep} \sum_{\timeIndex=1}^{\NTimeStep}  \LAR \cdot \indexTime{\left(\stateV\right)}
+\end{align*}
+The single observation $\obs = $ was obtained simulated using this data-generating process with input parameter $\ParTrue$ 
+[\todo: add model discrepancy and estimate the noise variance]. The single input parameter is equipped with the 
+prior 
+\begin{align*}
+\Par \sim \mathcal{U}(0.2, 1.0). 
+\end{align*}
+
+
 
 % Appendix 
 \section{Appendix}
