Updated 1d plot descriptions and started adding sequential design plots.

--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -406,17 +406,17 @@ may outweigh the downsides of log-likelihood emulation in many applications.
          \caption{$\Exp{\llikEm}$}
          \label{fig:lik_dist_llik}
      \end{subfigure}
-        \caption{Comparison of forward model and log-likelihood emulation in a simple one-dimensional problem ($\dimPar = \dimObs = 1$)
-        with $\fwd(\Par) = \sin(\Par) + 0.1 \Par$ and a single observation $\obs = 0$. 
-        The top and bottom rows correspond to the forward model emulation and log-likelihood emulation settings, respectively. 
-        The columns correspond to (1) the underlying GP emulator; (2) the log-likelihood emulator induced by the underlying GP; 
-        (3) the likelihood emulator induced by the underlying GP. Note that in the log-likelihood emulation case (1) and (2)
-        are identical. The dashed black line is the ground truth forward model or (log) likelihood and the red points are the 
+        \caption{Comparison of forward model and log-likelihood emulation in the simple one-dimensional problem ($\dimPar = \dimObs = 1$)
+        described in \Cref{vsem_1d}. The top and bottom rows correspond to the forward model emulation and log-likelihood 
+        emulation settings, respectively. The columns correspond to (1) the forward model emulator; (2) the log-likelihood 
+        emulator induced by the underlying GP; (3) the likelihood emulator induced by the underlying GP. When directly emulating the 
+        log-likelihood, the underlying GP is itself the log-likelihood emulator, and there is no forward model emulator.
+        The dashed black line is the ground truth forward model or (log) likelihood and the red points are the 
         design points used for emulator training. The blue line is the mean of the respective emulators, and the gray area 
-        covers the region within one standard deviation of the mean.}
+        covers the region within $1.64$ standard deviations of the mean (capturing approximately 90\% of the predictive distribution in the 
+        cases where the distribution is Gaussian).}
         \label{fig:em_dist_1d}
 \end{figure}
-
 
 % Posterior Approximation
 \section{Posterior Approximation}
@@ -468,14 +468,15 @@ discussed below, utilizing the same emulators from \Cref{fig:em_dist_1d}.
          \caption{$\postDensNorm(\Par)$ approximation using $\llikEm$}
          \label{fig:three sin x}
      \end{subfigure}
-        \caption{Posterior density approximations derived from the emulators in \Cref{fig:em_dist_1d}. The left and right 
+        \caption{Posterior density approximations derived from the emulators in \Cref{fig:em_dist_1d}, a continuation of 
+        the example detailed in \Cref{vsem_1d}. The left and right 
         figures plot the approximations derived from the forward model emulator and log-likelihood emulator, 
         respectively. The dashed black line is the true posterior density (no emulation). The exact posterior, as well 
         as the mean and marginal approximations, are normalized by approximating the normalizing constant using 
         numerical integration. The $\mcwmhJointLabel$ and $\mcwmhIndLabel$ densities are kernel density estimates 
         constructed from MCMC samples. Note that in general the normalized posterior density approximations do not 
-        interpolate the design points due to differences in normalizing constants. The mean approximation in the 
-        forward model emulation Gaussian setting is an exception in which the normalizing constants align.}
+        interpolate the design points due to differences in normalizing constants. \todo: change design points to vertical 
+        dashed lines and add a second row to the legend so it doesn't get cut off.}
         \label{fig:post_approx_1d}
 \end{figure}
 
@@ -1026,6 +1027,33 @@ using a log-likelihood emulator. The natural analogs of these acquisition functi
 &\labelAcq[\Ndesign]{\maxexpentLabel}(\designBatchIn) \Def -\Ent[\llikEmRdmDens[\Ndesign](\designBatchIn)]
 = \todo. \label{acq_max_exp_var_ent}
 \end{align} 
+
+\begin{figure}
+     \centering
+     \begin{subfigure}[b]{0.48\textwidth} % Posterior approximations [fwd]
+         \centering
+         \includegraphics[width=\textwidth]{{test_1d_visualization/acq_pw_fwd.png}}
+         \caption{$\acq[\Ndesign](\Par)$, with respect to $\fwdEm$}
+         \label{fig:y equals x}
+     \end{subfigure}
+     \hfill
+     \begin{subfigure}[b]{0.48\textwidth} % Posterior approximations [fwd]
+         \centering
+         \includegraphics[width=\textwidth]{{test_1d_visualization/acq_pw_llik.png}}
+         \caption{$\acq[\Ndesign](\Par)$, with respect to $\llikEm$}
+         \label{fig:three sin x}
+     \end{subfigure}
+        \caption{Pointwise maximum uncertainty acquisition functions evaluated at a grid of input values computed
+        using the emulators in \Cref{fig:em_dist_1d}, a continuation of the example detailed in \Cref{vsem_1d}. 
+        The left and right figures plot the approximations derived from the forward model emulator and log-likelihood 
+        emulator, respectively. Solid lines correspond to the acquisition functions in \Cref{acq_max_var_ent}; i.e., 
+        those are defined with respect to the underlying GP. Dashed lines correspond to the acquisition functions in 
+        \Cref{acq_max_exp_var_ent}; i.e., the analogous criteria tailored to the goal of posterior approximation.
+        Vertical dashed red lines indicate design input locations, and square markers correspond to the minimum of 
+        each acquisition function computed over the input grid. 
+        \label{fig:pw_max_uncertainty_1d}
+\end{figure}
+
 The closed-form expressions given follow from the Gaussian conditioning identities \ref{kriging_eqns}, the log-normal 
 variance expression in \Cref{llik_em_lik_emulator_moments}, and the known expression for log-normal entropy. 
 The ``exp'' in the naming convention highlights that these criteria are being applied to
@@ -1211,13 +1239,14 @@ with
 \obsOp(\indexTime[1]{\state}, \dots, \indexTime[\NTimeStep]{\state}) 
 \Def \frac{1}{\NTimeStep} \sum_{\timeIndex=1}^{\NTimeStep}  \LAR \cdot \indexTime{\left(\stateV\right)}
 \end{align*}
-The single observation $\obs = $ was obtained simulated using this data-generating process with input parameter $\ParTrue$ 
+The ground truth observable is given by $\fwd(\ParTrue) = (\obsOp \circ \solutionOp)(\ParTrue) \approx 5.55$ with 
+the single observation $\obs \approx 5.17$ simulated by adding a draw from the Gaussian noise, as specified above. 
 [\todo: add model discrepancy and estimate the noise variance]. The single input parameter is equipped with the 
 prior 
 \begin{align*}
-\Par \sim \mathcal{U}(0.2, 1.0). 
+\Par \sim \mathcal{U}(0.2, 1.0), 
 \end{align*}
-
+thus completing the specification of the Bayesian inverse problem. 
 
 
 % Appendix 
